Created Profile component.

--- a/designhub/.env
+++ b/designhub/.env
@@ -1,5 +1,4 @@
-REACT_APP_BACKEND_URL=http://localhost:5000
+REACT_APP_BACKEND_URL=https://designhubdev.herokuapp.com
 REACT_APP_AUTH0_DOMAIN=designhub.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=pavvuXEda3jiSyevzEoS7zMj1f9SUc5r
 REACT_APP_AUTH0_CALLBACK_URL=http://localhost:3000/callback
-HELLO=https://designhubdev.herokuapp.com
